[package]
name = "simple-redis"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
bytes = "1.6.0"
dashmap = "5.5.3"
enum_dispatch = "0.3.13"
futures = "0.3.30"
lazy_static = "1.4.0"
thiserror = "1.0.61"
tokio = "1.37.0"
tokio-stream = "0.1.15"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
